--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "celebrate": "^15.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
