--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,13 @@ dist
 # TernJS port file
 .tern-port
 
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 .pnp.*
 
 
